--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <body>
 	
-
-	<img src="https://startpages.github.io/startpages/start-druz320/rocket.jpg" id="bg" alt="">
+	<img scr="https://github.com/thebarkbark/launch-site/blob/master/pink-moon.png" id="bg" alt="">
+	<!--<img src="https://startpages.github.io/startpages/start-druz320/rocket.jpg" id="bg" alt="">-->
 
 
 
