--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	
-	<img scr="https://github.com/thebarkbark/launch-site/blob/master/pink-moon.png" id="bg" alt="">
+	<img scr=pink-moon.png" id="bg" alt="">
 	<!--<img src="https://startpages.github.io/startpages/start-druz320/rocket.jpg" id="bg" alt="">-->
 
 
