--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	
 	<img scr=pink-moon.png" id="bg" alt="">
-	<!--<img src="https://startpages.github.io/startpages/start-druz320/rocket.jpg" id="bg" alt="">-->
+	<img src="https://raw.githubusercontent.com/thebarkbark/launch-site/master/pink-moon.png" id="bg" alt="">
 
 
 
